--- a/1.IntroToR/R-intro.Rmd
+++ b/1.IntroToR/R-intro.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "R-intro"
+title: "A minimalistic R intro"
 author: "Timothée Bonnet"
-date: "January 8, 2018"
+date: "January 15, 2018"
 output: html_document
 ---
 
