--- a/1.IntroToR/R-intro.Rnw
+++ b/1.IntroToR/R-intro.Rnw
@@ -13,7 +13,7 @@
 \usepackage{multicol}
 \usepackage{booktabs}
 
-\title{A minimalistic introduction to R}
+\title{A minimalist introduction to R}
 \date{\today}
 \author{Timothée Bonnet \& al.}
 
@@ -21,8 +21,6 @@
 
 
 \maketitle
-
-\textit{This document recycles tutorials written by Koen van Benthem and Tina Cornioley}
 
 \tableofcontents
 
@@ -33,16 +31,16 @@ options(width=60)
 
 \vspace{2cm}
 \begin{mdframed}
-\textit{There are many ways to achieve the same goal in \texttt{R}, and we do not claim to teach you the most efficient way to use \texttt{R}. If you at some point during the computer practicals encounter a code that you could make more efficient or elegant, please do let us know! \\[1.5ex] 
-Do try to understand exactly what the code and the functions we use do. The best way to learn how functions work is by either using the \texttt{R}-manaul (type \texttt{?functionname} or use the RStudio Help tab by clicking on it or pressing F1) or by creating dummy data (just make up a small amount of data yourself, using \texttt{R} if possible!) and analyse what the function does to this data.}
+\textit{There are many ways to achieve the same goal in \texttt{R}, and we do not claim to teach you the most efficient way to use \texttt{R}. You may find more elegant ways! \\[1.5ex] 
+Do try to understand exactly what the code and the functions we use do. The best way to learn how functions work is by either using the \texttt{R}-manual (type \texttt{?functionname} or use the RStudio Help tab by clicking on it or pressing F1) or by creating dummy data (just make up a small amount of data yourself, using \texttt{R} if possible!) and analyse what the function does to this data.}
 \end{mdframed}
 \newpage
 
 \section*{How this document works}
-This is a \texttt{knitr} document, which knits \texttt{R} code and output within a \LaTeX document.
+%This is a \texttt{knitr} document, which knits \texttt{R} code and output within a \LaTeX document.
 R code and output is generally contained within boxes with a gray background. Comments within the R code start with a \# symbol; lines with R-outputs start with \#\#.
 
-All the files necessary to go through the workshop are (or should be!) in the folder of a github repository. We recommand you copy these files, or fork the repository if you are a git user.
+All the files necessary to go through the workshop are (or should be!) in the folder of a github repository. We recommend you copy these files, or fork the repository if you are a git user.
 
 Now, let's the fun begin.
 
@@ -70,7 +68,7 @@ sin(pi/2); cos(1); tan(pi/3) #trigonometric functions
 @
 
 \begin{mdframed}
-\textbf{Small exercise}
+\textbf{Small exercise}\\
 Use R to compute
 $$
   y = \frac{1}{2\sqrt{2\pi}} e^{\frac{-1}{2} (\frac{3-\pi}{2})^2}
@@ -107,14 +105,77 @@ The OR operator is \texttt{\textbar}
 2 == 4 | 3==2
 @
 
-
+\begin{mdframed}
+\textbf{Small exercise}\\
+Try and guess the result of these logical tests before running them:
+<<eval=FALSE>>=
+! 1==2
+(1!=2 | 3==4) & (2==4/2)
+"abc" != "bc" 
+@
+\end{mdframed}
 
 \subsection{Assignment}
-
+Values can be assigned to objects to store them and make your code flexible. You assign a value to an object using the operator \verb+ <- + (or \verb+ = +, but be careful not to confuse this with the \verb+ == + used in tests).
 
 <<>>=
+#You can use objects in calculation
+a <- 12
+a + 2
 
+# you can assign an object value to another object
+b <- a
+c <- a*b
+
+# you can re-assign an object
+a <- "c"
+b <- "c"
+a == b
+c <- a == "b"
+c
 @
+
+\section{Containers}
+A container is some kind of object that can contain several values.
+
+\subsection{Vectors}
+The simplest container is a vector.
+A flexible way to create a vector by \textit{concatenating} several values with the syntax \verb+ c(x,y,...)+.
+
+<<>>=
+a <- c(3,9,3,5)
+a
+@
+
+You can now do calculations on your vector:
+
+<<>>=
+a * 2
+@
+
+You can access one or several elements in the vector using squared brackets
+<<>>=
+#access one value
+a[1]
+a[2]
+
+#access multiple values by concatenating locations
+a[c(1,3)]
+
+#access mutiple successive values
+a[2:4]#the syntax x:y means "all integers between x and y"
+
+#modify a value
+a[3] <- -5
+a
+
+#modify mutiple values
+a[1:2] <- 1
+a
+@
+
+
+
 
 \section{loops and if statements}
 
@@ -123,5 +184,8 @@ The OR operator is \texttt{\textbar}
 \subsection{while loops}
 
 \subsection{if statements}
+
+
+
 
 \end{document}
