--- a/1.IntroToR/R-intro.Rnw
+++ b/1.IntroToR/R-intro.Rnw
@@ -13,6 +13,9 @@
 \usepackage{multicol}
 \usepackage{booktabs}
 
+\usepackage[autostyle, english = american]{csquotes}
+\MakeOuterQuote{"}
+
 \usepackage{hyperref}
 
 \title{A minimalist introduction to R}
@@ -29,6 +32,8 @@
 <<ksetup, cache=FALSE, include=FALSE>>=
 opts_chunk$set(dev="tikz",tidy=F,dev.args=list(pointsize=12))
 options(width=60)
+opts_chunk$set(background='#D7DDEB')
+
 @
 
 \vspace{2cm}
@@ -213,7 +218,8 @@ Data-frames are similar to matrices, but are much more flexible: they can store 
 
 <<>>=
 plant_data <- data.frame(plant = c("potatoes", "water hemlock", "carrot"),
-                         number= c(3,5,39), danger= c(FALSE,TRUE,FALSE))
+                         number= c(3,5,39), danger= c(FALSE,TRUE,FALSE),
+                         stringsAsFactors = FALSE)
 
 plant_data
 @
@@ -239,13 +245,119 @@ plant_data$plant[1]
 plant_data$danger
 @
 
-\section{Loops and if statements}
-Loops allow you to 
+It is very easy to create new columns, with one or the other syntax:
 
-\subsection{for loops}
+<<>>=
+plant_data[,"tasty"] <- c(TRUE, NA, TRUE) #NA means missing value
 
-\subsection{if statements}
+plant_data$color <- c("variable", "green", "orange")
 
+plant_data
+@
+
+You can also add new entries (rows):
+<<>>=
+plant_data[4,] <- c("eucalyptus", 24, NA, FALSE, "green")
+plant_data
+@
+
+
+\begin{mdframed}
+\textbf{Small exercise}\\
+Imagine you are a koala. Change the information about eucalyptus tastiness in the data-frame \verb+plant_data+.
+
+\end{mdframed}
+
+\section{For loops}
+Loops are a way to automatize repetitive tasks. 
+
+To demonstrate this, let's load some data that are buit-in R:
+<<>>=
+data(volcano)
+head(volcano)
+@
+
+\texttt{volcano} is a matrix containing topographic information for the Maunga Whau volcano.
+
+You can visualize it with:
+<<imvol>>=
+image(volcano)
+@
+
+Now, let's pretend with want the average elevation for every column.
+
+We can use the function \texttt{mean()} to calculate the average of the first column, remembering how to access a column in a matrix:
+<<>>=
+mean( volcano[,1] )
+@
+
+We could change 1 to 2, then 3, then 4... until 61, and run 61 R-commands, but that is horribly inefficient. 
+That is where a for-loop may be useful. Instead of writing code for the column "1" or "2"..."61",  we will write code for column "i", where "i" varies between 1 and 61: \texttt{mean( volcano[,i] )}.
+
+Now, R doesn't know yet what "i" is, and would return an error message if you run this:
+
+<<>>=
+mean( volcano[,i] )
+@
+
+We need to include our code within a for-loop defining "i":
+
+<<eval=FALSE>>=
+for (i in 1:61)
+{
+  ...
+}
+@
+
+The above code can be read as: "Define a variable i that will take integer values between 1 and 61, and do whatever is withing curly brackets for each value of i. "
+
+If we run this:
+<<>>=
+for (i in 1:61)
+{
+  mean( volcano[,i] )
+}
+@
+it looks like nothing happened. Actually, R did compute all the averages, but we didn't ask R to print the results or store them somewhere, so the loop was useless. 
+
+We can print the results using the function \texttt{print()}:
+<<>>=
+for (i in 1:61)
+{
+  print(mean( volcano[,i] ))
+}
+@
+
+Even better, we can store the results in a vector that we create before the loop:
+
+<<>>=
+averages <- vector(length = 61)
+
+for (i in 1:61)
+{
+  averages[i] <- mean( volcano[,i] )
+}
+
+averages
+@
+
+
+Finally, we can make the code more robust and reproducible by calculating the number of columns in the data instead of assuming it is always going to be 61. For that, we use the function \texttt{ncol()} that simply returns the number of columns in a data-frame or a matrix:
+
+<<>>=
+averages <- vector(length = ncol(volcano))
+
+for (i in 1:ncol(volcano))
+{
+  averages[i] <- mean( volcano[,i] )
+}
+@
+
+\begin{mdframed}
+\textbf{Small exercise}\\
+Make a for-loop that calculate the variance for each row of volcano. You will probably want to use the function \texttt{var()} and the function \texttt{nrow()}.
+
+\end{mdframed}
 
 \section{Simple Graphics}
 
